--- a/src/styles/ForecastDailySummary.css
+++ b/src/styles/ForecastDailySummary.css
@@ -12,7 +12,7 @@
 }
 
 .forecast-daily-summary > p {
-  font-size: min(1.2rem, 1.8cqw);
+  font-size: min(1.2rem, 3cqw);
   color: var(--almost-white);
   text-shadow: 1px 1px 2px var(--almost-black);
 }
@@ -45,7 +45,7 @@
   color: var(--dark-blue);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
   .forecast-daily-summary br {
     display: none;
   }
