--- a/src/styles/ForecastTrihourlySummary.css
+++ b/src/styles/ForecastTrihourlySummary.css
@@ -16,7 +16,7 @@
 }
 
 .forecast-trihourly-summary > p {
-  font-size: min(1rem, 2cqw);
+  font-size: min(1rem, 2.8cqw);
   text-shadow: 1px 1px 2px var(--almost-white);
 }
 
